tabs stretched and horizontal scroll issue fixed

--- a/src/app/noticer/noticer-main/noticer-main.component.css
+++ b/src/app/noticer/noticer-main/noticer-main.component.css
@@ -216,3 +216,6 @@ figcaption {
     margin-top: -10px;
  }
  
+ .horizontalScroll{
+     overflow-x: hidden !important;
+ }
